--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap');
+
+:root {
+  --primary: #f57c00;
+  --primary-shadow: #de560b;
+  --Background-cardProgressBar: #ffffff;
+  --Background-cardForm: #f2f2f2;
+
+  /*font size variable*/
+  --fontBase: 'Inter', sans-serif;
+  --Label: 14px/25px var(--fontBase);
+}
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
+  font-family: var(--fontBase);
   background: rgba(222, 143, 11, 0.6);
 }
