--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   --primary-shadow: #de560b;
   --Background-cardProgressBar: #ffffff;
   --Background-cardForm: #f2f2f2;
+  --Black: #000;
 
   /*font size variable*/
   --fontBase: 'Inter', sans-serif;
