--- a/src/components/items/Input/input.css
+++ b/src/components/items/Input/input.css
@@ -1,18 +1,20 @@
 .form {
   margin-block: 40px;
-  width: 117px;
-  box-sizing: border-box;
-}
-.form-container {
-  position: relative;
+  inline-size: 100%;
   height: 30px;
 }
+.form-container {
+  inline-size: 100%;
+  block-size: 100%;
+  position: relative;
+}
 .form-input {
+  box-sizing: border-box;
   position: absolute;
+  block-size: 40px;
+  inline-size: 100%;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
   border: 2px solid var(--Black);
   border-radius: 0.6rem;
   font: inherit;
@@ -36,7 +38,7 @@
 .form-label {
   position: absolute;
   left: 1rem;
-  top: 0.8rem;
+  top: 0.1rem;
   font: var(--Label);
   font-size: 16px;
   font-weight: bold;
